fixed icon alignment

--- a/src/app/tabs/components/tabs/quap/quap-tab/quap-tab.component.scss
+++ b/src/app/tabs/components/tabs/quap/quap-tab/quap-tab.component.scss
@@ -6,15 +6,21 @@ $quap-color-yellow: #ADD950;
 $quap-color-green: #50D96E;
 $quap-color-gray: #C4C4C4;
 
-.widget-card .card-header {
-  .button-menu {
-    display: flex;
-    flex-direction: row;
 
-    padding-right: 12px;
 
-    button {
-      margin-left: 10px;
+.widget-card {
+  padding-top: 5px;
+
+  .card-header {
+    .button-menu {
+      display: flex;
+      flex-direction: row;
+
+      padding-right: 12px;
+
+      button {
+        margin-left: 10px;
+      }
     }
   }
 }
